--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "gatsby build"
   },
   "dependencies": {
+    "@awolf81/gatsby-theme-addthis": "^0.0.4",
+    "dotenv": "^8.1.0",
     "gatsby": "^2.15.18",
     "gatsby-theme-blog": "^1.0.2",
     "react": "^16.9.0",
