--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gatsby-starter-blog-theme",
   "private": true,
   "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
